# FileFlow-Organizer

./: .gitignore  README.md  index.html  package-lock.json  package.json  run.bat  tsconfig.json  vite.config.js
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
