[package]
name = "fileflow-organizer"
version = "0.1.0"
description = "A local Windows file organizer"
authors = ["FileFlow"]
edition = "2021"

[lib]
name = "fileflow_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tauri = { version = "2.10.2", features = [] }
walkdir = "2.5.0"
